updates to java 8