@@ -3,6 +3,7 @@ package org.asmeta.xt.validator;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -78,7 +79,7 @@ public class AsmetaFromAvallaBuilder {
 	 * @throws Exception the exception
 	 */
 	public AsmetaFromAvallaBuilder(String scenarioPath, String tempAsmPath) throws Exception {
-		assert Path.of(scenarioPath).toFile().exists();
+		assert Paths.get(scenarioPath).toFile().exists();
 		scenarioDirectoryPath = new File(scenarioPath).getAbsoluteFile().getParent();
 		// read the spec from file
 		Injector injector = new AvallaStandaloneSetup().createInjectorAndDoEMFRegistration();
